// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSingleProduct Saga Deberia disparar la accion de singleProductLoaded si se puede traer la data 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getSingleProduct Saga Deberia disparar la accion de singleProductLoaded si se puede traer la data 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "http://localhost:9000/api/items/MLA733099149",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`getSingleProduct Saga Deberia disparar la accion singleProductLoadingError si hubo errores 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getSingleProduct Saga Deberia disparar la accion singleProductLoadingError si hubo errores 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "http://localhost:9000/api/items/MLA733099149",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
